# Research-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 11e6692420e0_switch_memory_embedding_index_from_.py  e499796aabe5_initial_schema_with_pgvector.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: graph.py  planner.py  progress.py  search.py  state.py  summarizer.py  writer.py
backend/app/api/: auth.py  chat.py  research.py
backend/app/core/: deps.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/llm/: base.py  ollama_client.py
backend/app/memory/: embeddings.py  store.py
backend/app/schemas/: auth.py  chat.py  research.py
backend/app/tasks/: celery_app.py  research_task.py
backend/app/tools/: arxiv_search.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/research/[id]/: page.tsx
frontend/src/components/: Nav.tsx
frontend/src/lib/: api.ts  auth.ts
nginx/: nginx.conf
