[project]
name = "research-agent-backend"
version = "0.1.0"
description = "AI Research Agent backend — FastAPI + LangGraph + Ollama + pgvector"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.10",
  "alembic>=1.14.0",
  "pgvector>=0.3.6",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==4.0.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "httpx>=0.27.2",
  "arxiv>=2.1.3",
  "langgraph>=0.2.50",
  "langchain-core>=0.3.20",
  "celery[redis]>=5.4.0",
  "redis>=5.2.0",
  "sse-starlette>=2.1.3",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
  "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
